feat: add user token api
